Grammar
    <start>          -->  {<statement>}
    <statement>       -->  <block> | <selection> | <while_loop> | <declaration> | <assignment>
    <block>          -->  '{' <start> '}'
    <selection>      -->  'if' '(' <bool_relation> ')' '{' <start> '}' [<else_statement>|<elif_statement>]
    <while_loop>     -->  'while' '(' <bool_relation> ')' '{' <start> '}'
    <declaration>    -->  <var_declare> | <func_declare>
    <assignment>     -->  [a-zA-Z_][a-zA-Z0-9_]* '=' <bool_relation>
    <bool_relation>  -->  <bool_expr> {'!=='|'==' <bool_expr>}
    <else_statement> -->  'else' '{' <start> '}'
    <elif_statement> -->  'elif' '(' <bool_relation> ')' '{' <start> '}' [<else_statement>|<elif_statement>]
    <var_declare>    -->  ('String'|'int'|'char'|'float'|'bool') [a-zA-Z_][a-zA-Z0-9_]*
    <func_declare>   -->  'def' [a-zA-Z_][a-zA-Z0-9_]* '(' {[a-zA-Z_][a-zA-Z0-9_]* ','} ')'
                           '{' <start> '}'
    <bool_expr>      -->  <expr> {'<=='|'>=='|'<'|'>' <expr>}
    <expr>           -->  <term> {'+'|'-' <term>}
    <term>           -->  <exp> {'*'|'/'|'%' <exp>}
    <exp>            -->  <logical> {'^' <logical>}
    <logical>        -->  <factor> {'~'|'&'|'|' <factor>}
    <factor>         -->  [a-zA-Z_][a-zA-Z0-9_]* | [-+]?[0-9]*[.][0-9]+ | [-+]?[0-9]+ |
                          ((?<![a-zA-Z0-9_])True(?![a-zA-Z0-9_])|(?<![a-zA-Z0-9_])False(?![a-zA-Z0-9_]))
                          | '[ -~]' | \'(\\\\.|[^\'\\\\])*\' | '(' <bool_relation> ')'
                          | [a-zA-Z_][a-zA-Z0-9_]* '(' {[a-zA-Z_][a-zA-Z0-9_]* ','} ')'
